--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.23.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.2",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
